[workspace]
members = [ "crates/qstra",
    "crates/qstra_prim",
    "crates/qstra_prob",
    "crates/qstra_stor",
]

[workspace.dependencies]
qstra = { path = "crates/qstra" }
qstra_prob = { path = "crates/qstra_prob" }
qstra_prim = { path = "crates/qstra_prim" }
qstra_stor = { path = "crates/qstra_stor" }
