[workspace]
members = ["crates/qstra",
           "crates/qstra_prim",
           "crates/qstra_prob",
           "crates/qstra_stor",
          ]

[workspace.package]
authors=["Kasperi Apell <apkaspell@gmail.com>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
qstra = { path = "crates/qstra" }
qstra_prob = { path = "crates/qstra_prob" }
qstra_prim = { path = "crates/qstra_prim" }
qstra_stor = { path = "crates/qstra_stor" }
